# streetzim

./: .firebaserc  .gitignore  Caching.md  LICENSE  README.md  RESEARCH.md  build-and-upload-queue.sh  build-coasts.sh  build_world_and_us.sh  cloud_rsync_loop.sh  cloud_terrain_collect.sh  cloud_terrain_gen.py  cloud_terrain_launch.sh  cloud_terrain_monitor.sh  create_osm_zim.py  create_osm_zim_leaflet.py  download_dem.py  download_overture_data.py  drive-rollout.sh  firebase.json  fix_boundary_chunk.py  fix_boundary_terrain.py  fix_terrain_tiles.py  osm-monaco-leaflet.zim  osm-monaco.zim  osm-washington-dc-leaflet.zim  overture-rollout-redo.sh  package-lock.json  package.json  rebuild-all-final.sh  rebuild-queue.sh  recompress_avif.py  requirements.txt  test_satellite_compression.py  test_terrain_compression.py  test_zim_perf.py  upload-to-archive.sh  verify_tile_cache.py  wikidata_cache.py
cloud/: audit_dem_cache.py  build-vm-startup.sh  build_region.sh  build_torrent.py  chip-retrofit-d.sh  chip_rules.py  cleanup_old_zims.py  decode_check.py  deploy_pwa.sh  diff_zim.py  fix_stale_terrain_tiles.py  fix_terrain_seams.py  generate_all_torrents.py  launch-build-vm.sh  manifest_writer.py  preflight.py  pwa_smoke_test.mjs  rebuild-all.sh  rebuild_overture_regions.sh  regen_all_low_zoom.py  regen_low_zoom.py  repackage_zim.py  reroll-sv-iran.sh  reroll_viewer.sh  restart-build.sh  rollout_viewer_swap.sh  route_browser_test.mjs  route_cli.py  route_compare.mjs  serve_zims.py  spot-to-ondemand-watcher.sh  (+9 more)
rust/streetzim-pack/: Cargo.toml
rust/streetzim-pack/src/: main.rs
(+86 files in other folders)
