[package]
name = "streetzim-pack"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pack a streetzim build manifest (JSONL) into a ZIM file via zimru."

[[bin]]
name = "streetzim-pack"
path = "src/main.rs"

[dependencies]
zimru = { path = "../../../zimru" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
